--- a/frontendProject/index.html
+++ b/frontendProject/index.html
@@ -13,3 +13,15 @@
 </body>
 
 </html>
+<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet">
+<style>
+  html,
+  body {
+    font-family: 'Nanum Gothic';
+    font-size: 12px;
+  }
+  #app {
+    font-family: 'Nanum Gothic';
+    font-size: 12px;
+  }
+</style>
